Correct details of design concepts on differents sections and components

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -36,11 +36,15 @@ import { Icon } from "astro-icon/components";
     align-items: center;
     gap: 2rem;
 }
-.footer-container__dev-signature,
-.footer-container__link-to-top{
-    font: normal normal 600 clamp(1.2rem, 6vw, 1.5rem) var(--display-font, Tahoma);
+.footer-container__dev-signature{
+    font: normal normal 200 clamp(1.3rem, 6vw, 1.5rem) var(--display-font, Tahoma);
     text-align: center;
 }
+
+.footer-container__link-to-top{
+    font: normal normal 200 1.1rem var(--display-font, Tahoma);
+}
+
 .footer-container__contact-icons-list{
     display: flex;
     gap: 2rem;
