--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -175,4 +175,8 @@ import Footer from '@components/Footer.astro';
 		background-color: var(--color-details) !important;
 		color: var(--color-titles) !important;
 	}
+
+	body:has(.mobile-menu_open){
+		overflow-y: hidden;
+	}
 </style>
