--- a/src/content/FormationSection.astro
+++ b/src/content/FormationSection.astro
@@ -7,7 +7,7 @@
     <ul class="formation-list">
         <li class="formation-list-item">
             <h2 class="formation-list-item__title">Técnico Superior en Análisis y Desarrollo de Software (2018 - 2022)</h2>
-            <p class="formation-list-item__paragraph">Estudie la tecnicatura en el instituto Sedes Sapientiae, donde conocí las bases de la programación, lógica, base de datos, redes. </p>
+            <p class="formation-list-item__paragraph">Estudie la tecnicatura en el instituto Sedes Sapientiae, donde conocí las bases de la programación, lógica, base de datos y redes. </p>
         </li>
         <li class="formation-list-item">
             <h2 class="formation-list-item__title">Cursos en plataformas online</h2>
@@ -34,7 +34,8 @@
     }
 
     .formation-container__title{
-        font: normal normal 600 clamp(2.2rem, 6vw, 3rem) var(--display-font, Tahoma);
+        font: normal normal 600 clamp(2.5rem, 6vw, 3rem) var(--display-font, Tahoma);
+        text-align: center;
         color: var(--color-titles);
     }
 
@@ -46,7 +47,7 @@
 
     .formation-list{
         padding: 0 2rem;
-        gap: 1.5rem;
+        gap: 3rem;
     }
     .formation-list-item{
         gap: 1rem;
@@ -58,11 +59,11 @@
     }
 
     .formation-list-item__title{
-        font: normal normal 600 clamp(1.5rem, 6vw, 2rem) var(--display-font, Tahoma);
+        font: normal normal 200 clamp(1.5rem, 6vw, 2rem) var(--display-font, Tahoma);
         color: var(--color-titles);
     }
     .formation-list-item__paragraph{
-        font: normal normal 200 clamp(1.2rem, 6vw, 1.5rem) var(--default-font, Arial);
+        font: normal normal 200 clamp(1.3rem, 6vw, 1.5rem) var(--default-font, Arial);
     }
     
     .download-cv-button{
