--- a/src/content/ProjectsSection.astro
+++ b/src/content/ProjectsSection.astro
@@ -111,8 +111,8 @@ import ArenaMobileInicio from '@assets/projects/ArenaMobileInicio.webp'
         <p>Tambien guarda los 3 mejores tiempos, de manera local en el navegador.</p>
     </Modal>    
     <Modal triggerId="project5-modal-trigger" title="Landing page para gimnasio " closeText="Cerrar">
-        <p>Diseñar y desarrollar esta landing me ayudo a sacarle mejor provecho a la herramienta Figma y tambien me hizo dar cuenta de varios conceptos sobre diseño web.</p>
         <p>La pagina trata sobre un gimnasio local el cual no cuenta con una pagina web y solo hace uso de redes sociales.</p>
+        <p>Diseñar y desarrollar esta landing me ayudo a sacarle mejor provecho a la herramienta Figma y tambien me hizo dar cuenta de varios conceptos sobre diseño web.</p>
         <p>Aqui usé <strong>Astro con la integracion de React</strong>.</p>
     </Modal>    
     <Modal triggerId="project6-modal-trigger" title="Arena Mobile" closeText="Cerrar">
@@ -148,9 +148,12 @@ import ArenaMobileInicio from '@assets/projects/ArenaMobileInicio.webp'
     }
 
     .projects-container__title{
-        font: normal normal 600 clamp(2.2rem, 6vw, 3rem) var(--display-font, Tahoma);
+        font: normal normal 600 clamp(2.5rem, 6vw, 3rem) var(--display-font, Tahoma);
+        text-align: center;
         color: var(--color-titles);
+        margin: 2rem 0;
     }
+    
     .projects-list{
         margin-top: 5rem;
         padding: 0 1rem 10rem 1rem;
@@ -158,7 +161,7 @@ import ArenaMobileInicio from '@assets/projects/ArenaMobileInicio.webp'
         flex-direction: row;
         align-items: center;
         justify-content: center;
-        gap: 7rem;
+        gap: 8rem;
         flex-wrap: wrap;
     }
     .projects-list-item{
@@ -193,7 +196,7 @@ import ArenaMobileInicio from '@assets/projects/ArenaMobileInicio.webp'
     }
 
     .title-project{
-        font: normal normal 500 1.5rem var(--display-font);
+        font: normal normal 400 1.5rem var(--display-font);
         color: var(--color-titles);
         text-wrap: balance;
         text-align: center;
