Change favicon and move cv file to public directory

--- a/src/content/FormationSection.astro
+++ b/src/content/FormationSection.astro
@@ -18,7 +18,7 @@
             <p class="formation-list-item__paragraph">A dia de hoy trato de mantenerme actualizado con las tecnologías y novedades que emergen en la comunidad IT, realizando proyectos personales. </p>
         </li>
     </ul>
-    <a class="download-cv-button" href="/src/assets/NehuenCuenca-CV-ESP.pdf" download>Descargar CV</a>
+    <a class="download-cv-button" href="/NehuenCuenca-CV-ESP.pdf" download>Descargar CV</a>
 </section>
 
 <style>
