--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -19,7 +19,7 @@ import Footer from '@components/Footer.astro';
 		<meta charset="UTF-8" />
 		<meta name="description" content="¡Hola, soy Nehuen Cuenca y te doy la bienvenida a mi portfolio de desarrollador web donde describo mi formacion, proyectos, tecnologias y servicios que puedo ofrecer!" />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<link rel="icon" type="image/svg+xml" href="/Sunglasses-Emoji.png" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 	</head>
