--- a/src/content/Hero.astro
+++ b/src/content/Hero.astro
@@ -21,14 +21,17 @@ import NerdFace from '@assets/emojis/nerd-face_1f913-removebg-preview.png'
 <style>
     .hero-container{
         padding: 2rem 1rem;
-        height: 85vh;
+        height: clamp(470px, 90vh, 90vh);
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: space-between;
         animation: fadeFromCenter 2s ease 0s 1 normal forwards;
     }
-    
+
+    .texts-container{
+        margin: auto 0;
+    }
 
     .texts-container__title, 
     .texts-container__subtitle {
@@ -36,13 +39,13 @@ import NerdFace from '@assets/emojis/nerd-face_1f913-removebg-preview.png'
     }
 
     .texts-container__title{
-        font: normal normal 800 clamp(2.5rem, 6vw, 4rem) var(--display-font, Tahoma);
+        font: normal normal 800 clamp(2.5rem, 12vw, 5rem) var(--display-font, Tahoma);
         color: var(--color-titles);
         margin: 2rem 0 1rem 0;
     }
 
     .texts-container__subtitle{
-        font: normal normal 150 clamp(1.7rem, 5vw, 2.3rem) var(--default-font, Arial);
+        font: normal normal 150 clamp(1.7rem, 8vw, 3rem) var(--default-font, Arial);
         text-wrap: balance;
     }
 
