--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -146,6 +146,7 @@ import Footer from '@components/Footer.astro';
 	}
 
 	dialog[open] {
+		max-width: 90vw;
 		margin: auto;
 		color: var(--color-font);
     	background-color: var(--color-bg);
@@ -154,13 +155,14 @@ import Footer from '@components/Footer.astro';
 	}
 
 	.modal__content{
-		font: normal normal 400 1.3rem var(--default-font);
+		font: normal normal 400 clamp(1.7rem, 8vw, 2rem) var(--default-font);
 		max-height: 70vh;
 		overflow-y: auto;
+		word-break: break-word;
 	}
 
 	.modal__content h3{
-		font: normal normal 400 1.5rem var(--display-font);
+		font: normal normal 400 clamp(2rem, 5vh, 2.5rem) var(--display-font);
 		color: var(--color-titles)
 	}
 
@@ -169,7 +171,7 @@ import Footer from '@components/Footer.astro';
 	}
 
 	.modal__close, .modal__close button{
-		font: normal normal 400 1.3rem var(--display-font);
+		font: normal normal 400 clamp(1.8rem, 8vw, 2.2rem) var(--display-font);
 		background-color: var(--color-details) !important;
 		color: var(--color-titles) !important;
 	}
