Add and fix texts from Projects and Services section

--- a/src/content/ProjectsSection.astro
+++ b/src/content/ProjectsSection.astro
@@ -102,7 +102,7 @@ import ArenaMobileInicio from '@assets/projects/ArenaMobileInicio.webp'
         <p>Fue realizado con <strong>HTML, CSS y Vue</strong>.</p>
     </Modal>    
     <Modal triggerId="project3-modal-trigger" title="Tributo a Post Malone" closeText="Cerrar">
-        <p>Una de las tantas paginas que desarrollé para reclamar el <a href="https://www.freecodecamp.org/espanol/certification/NehuenCuenca7/responsive-web-design" target="_blank">certificado de Responsive Web Design en FreeCodeCamp.</a></p>
+        <p>Una de varias paginas que desarrollé para reclamar el <a href="https://www.freecodecamp.org/espanol/certification/NehuenCuenca7/responsive-web-design" target="_blank">certificado de Responsive Web Design en FreeCodeCamp.</a></p>
         <p>Cuenta un poco de la vida de Post y muestra algunos de sus albums.</p>
     </Modal>    
     <Modal triggerId="project4-modal-trigger" title="Minijuego de Matematicas" closeText="Cerrar">
@@ -111,8 +111,8 @@ import ArenaMobileInicio from '@assets/projects/ArenaMobileInicio.webp'
         <p>Tambien guarda los 3 mejores tiempos, de manera local en el navegador.</p>
     </Modal>    
     <Modal triggerId="project5-modal-trigger" title="Landing page para gimnasio " closeText="Cerrar">
-        <p>La pagina trata sobre un gimnasio local el cual no cuenta con una pagina web y solo hace uso de redes sociales.</p>
-        <p>Diseñar y desarrollar esta landing me ayudo a sacarle mejor provecho a la herramienta Figma y tambien me hizo dar cuenta de varios conceptos sobre diseño web.</p>
+        <p>Proyecto que trata sobre un gimnasio local el cual no cuenta con una pagina web y solo hace uso de redes sociales.</p>
+        <p>El diseñar y desarrollar esta landing page me ayudo a sacarle mejor provecho a la herramienta Figma y tambien me hizo dar cuenta de varios conceptos sobre diseño web.</p>
         <p>Aqui usé <strong>Astro con la integracion de React</strong>.</p>
     </Modal>    
     <Modal triggerId="project6-modal-trigger" title="Arena Mobile" closeText="Cerrar">
