--- a/src/content/ServicesSection.astro
+++ b/src/content/ServicesSection.astro
@@ -64,12 +64,16 @@ import BackendService from '@assets/services/backend-service.png';
         <li class="frontend-service-item">Aplicar un diseño adaptable/responsivo a distintos tipos de dispositivos y versiones de navegadores.</li>
         <li class="frontend-service-item">Construir herramientas que optimicen la comunicacion entre el usuario y la web.</li>
         <li class="frontend-service-item">Programacion, modificacion y mantenimiento de un sitio web.</li>
-        <li class="frontend-service-item">Consultar API's para lograr una conexion entre diferentes servicios y sistemas disponibles.</li>
+        <li class="frontend-service-item">Consultar API's para conseguir una conexion entre diferentes servicios y sistemas disponibles.</li>
       </ul>
     </Modal>  
     <Modal triggerId="service3-modal-trigger" title="Backend" closeText="Cerrar">
       <ul class="service-items-list service-items-list_backend">
-
+        <li class="backend-service-item">Construir las funcionalidades para simplificar y/o automatizar el proceso de desarrollo de software</li>
+        <li class="backend-service-item">Definicion, configuracion y mantenimiento de base de datos.</li>
+        <li class="backend-service-item">Establecer conexion e interaccion entre la base de datos y las soluciones operativas.</li>
+        <li class="backend-service-item">Desarrollo de API propia y acoplamiento con otras.</li>
+        <li class="backend-service-item">Configurar y mantener los servidores.</li>
       </ul>
     </Modal>  
 </section>
