Update links and the description of the reworked math minigame project

--- a/src/content/ProjectsSection.astro
+++ b/src/content/ProjectsSection.astro
@@ -63,8 +63,8 @@ import ArenaMobileInicio from '@assets/projects/ArenaMobileInicio.webp'
                 </button>
             </span>
             <div class="projects-list-item__links">
-                <a href="https://math-minigame-nc.netlify.app/" target="_blank">Demo</a>
-                <a href="https://github.com/NehuenCuenca/math-minigame" target="_blank">Repositorio</a>
+                <a href="https://math-minigame-rework-nc.netlify.app/" target="_blank">Demo</a>
+                <a href="https://github.com/NehuenCuenca/math-minigame-rework" target="_blank">Repositorio</a>
             </div>
         </li>
         <li class="projects-list-item">
@@ -108,7 +108,7 @@ import ArenaMobileInicio from '@assets/projects/ArenaMobileInicio.webp'
     <Modal triggerId="project4-modal-trigger" title="Minijuego de Matematicas" closeText="Cerrar">
         <p>Otro juego que quise replicar <a href="https://www.tiktok.com/@chriskotra/video/7154986619806715138?is_copy_url=1&is_from_webapp=v1" target="_blank">cuando lo vi en TikTok.</a></p>
         <p>Se trata de realizar 10 cuentas matematicas en el menor tiempo posible. Las cuentas incluyen: suma, resta y multiplicacion.</p>
-        <p>Tambien guarda los 3 mejores tiempos, de manera local en el navegador.</p>
+        <p>Rediseñe <a href="https://math-minigame-nc.netlify.app/" target="_blank">su version anterior</a>, mejorando la experiencia de usuario en los distintos tipos de pantallas y añadiendo un tema claro/oscuro.</p>
     </Modal>    
     <Modal triggerId="project5-modal-trigger" title="Landing page para gimnasio " closeText="Cerrar">
         <p>Proyecto que trata sobre un gimnasio local el cual no cuenta con una pagina web y solo hace uso de redes sociales.</p>
